--- a/bio.html
+++ b/bio.html
@@ -37,7 +37,7 @@
                 <h2>Personal Info</h2> <br>
                 <p>Hello and Thank you for taking time to get to know me! <br>
                     My name is Jarrett Alan Schnaare and I am 25 years old. 
-                    I live near Madison, WI and have a love for programming.</p> 
+                    I live near Madison, WI and have a love for technology.</p> 
             </div>
         </div>
         <div class="bio-section img-last">
